--- a/templates/login.html
+++ b/templates/login.html
@@ -1,31 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>CALCULATOR</title>
-        <link rel="stylesheet" href="../static/css/style.css">
-    </head>
-    <body>
-        <div class="title-div"><h1>full stack calculator</h1>
-            
-            <form action="" method="Post">
-            <input type="number" required placeholder="Enter num1" name="num1">
-            <select name="opr" required>
-                 <option value="" disabled selected >select</option>
-                 <option value="add">+</option>
-                 <option value="sub">-</option>
-                 <option value="mul">x</option>
-                 <option value="div">/</option>
-            </select>
-            <input type="number" required placeholder="Enter num2" name="num2">
-                <button type="submit" >Calculate</button>
-            </form>
-            </div>
-            <div class="output-div">
-                {{output}}
-            </div>
-        </body>
-        </html>
 
-            
-       
-    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Login</title>
+    <link rel="stylesheet" href="../static/css/style.css">
+</head>
+<body>
+    <div class="login-div">
+        <form action="" method="post">
+            <input type="email" placeholder="Enter Email" required name="email">
+            <input type="password" placeholder="Enter Password" required name="password">
+            <button type="submit" id="lgn-btn">Login</button>
+        </form>
+    </div>
+    <script src="../static/js/style.js"></script>
+</body>
+</html>
